# budget-beacon

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
.github/: issue_template.md  pull_request_template.md
finances/: admin.py  models.py
finances/migrations/: 0001_initial.py  0002_alter_currency_options.py  0002_initial.py
hub/: asgi.py  settings.py  urls.py
project/: settings.py  urls.py  wsgi.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_add_currency_field_to_user_profile.py  0002_alter_user_email_alter_user_role_and_more.py
users/tests/: test_users.py
utils/tests/: api.py
