[tool.poetry]
name = "utility-hub"
version = "0.1.0"
description = "UtilityHub - a versatile set of applications developed on Django, designed for everyday use."
authors = ["Evan Vesmirov <evan.vesmirov@proton.me>"]
readme = "README.md"
packages = [{include = "utility_hub"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
